<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_main"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/header_title_text" />

    <Button
        android:id="@+id/button_ppe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:layout_marginTop="@dimen/dialog_content_left_right_spacing"
        android:text="@string/ppe"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnPPE"/>

    <Button
        android:id="@+id/button_sds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:layout_marginTop="@dimen/dialog_content_top_bottom_spacing2"
        android:text="@string/sds"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnSDS"
        android:enabled="false"/>

    <Button
        android:id="@+id/button_scan_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:layout_marginTop="@dimen/dialog_content_top_bottom_spacing2"
        android:text="@string/scan_details"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnScanDetails"
        android:enabled="false"/>

    <Button
        android:id="@+id/button_safety_checks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:layout_marginTop="@dimen/dialog_content_top_bottom_spacing2"
        android:text="@string/safety_checks"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnSafetyChecks"
        android:enabled="false"/>

</LinearLayout>