<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/detail_verification_title"
        android:textSize="@dimen/header_title_text"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_operator_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:layout_marginTop="@dimen/dialog_content_left_right_spacing"
        android:text="@string/operator_id"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnOperatorID"/>

    <TextView
        android:id="@+id/text_operator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/default_app_text" />

    <Button
        android:id="@+id/button_driver_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:text="@string/driver_id"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnDriverID"
        android:enabled="false"/>

    <TextView
        android:id="@+id/text_driver_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/default_app_text" />

    <Button
        android:id="@+id/button_work_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:text="@string/work_instruction"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnWorkInstruction"
        android:enabled="false"/>

</LinearLayout>