<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stop_operation_title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/header_title_text" />

        <Button
            android:id="@+id/button_pump_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
            android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
            android:layout_marginTop="@dimen/dialog_content_left_right_spacing"
            android:text="@string/pump_stop"
            android:textSize="@dimen/default_app_text"
            android:onClick="btnPumpStop"/>

        <TextView
            android:id="@+id/text_pump_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/default_app_text" />

        <Button
            android:id="@+id/button_scan_seal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
            android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
            android:text="@string/scan_seal"
            android:textSize="@dimen/default_app_text"
            android:onClick="btnScanSeal"
            android:enabled="false"/>

        <TextView
            android:id="@+id/text_scan_seal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/default_app_text" />

        <Button
            android:id="@+id/button_departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
            android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
            android:text="@string/departure"
            android:textSize="@dimen/default_app_text"
            android:onClick="btnDeparture"
            android:enabled="false"/>

</LinearLayout>