<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loading_operation_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/header_title_text" />

    <Button
        android:id="@+id/button_scan_loading_arm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:layout_marginTop="@dimen/dialog_content_left_right_spacing"
        android:text="@string/scan_loading_arm"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnScanLoadingArm"/>

    <TextView
        android:id="@+id/text_scan_loading_arm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/default_app_text" />

    <Button
        android:id="@+id/button_batch_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:text="@string/batch_controller"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnBatchController"
        android:enabled="false"/>

    <TextView
        android:id="@+id/text_batch_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/default_app_text" />

    <Button
        android:id="@+id/button_pump_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dialog_content_left_right_spacing"
        android:layout_marginRight="@dimen/dialog_content_left_right_spacing"
        android:text="@string/pump_start"
        android:textSize="@dimen/default_app_text"
        android:onClick="btnPumpStart"
        android:enabled="false"/>

    <TextView
        android:id="@+id/text_pump_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/default_app_text" />

</LinearLayout>