<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_job_id"
            android:layout_width="@dimen/no_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_spacing"
            android:layout_marginRight="@dimen/list_item_spacing"
            android:layout_weight="0.17"
            android:padding="@dimen/list_item_padding"
            android:text="@string/order"
            android:textStyle=""
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_app_text" />

        <TextView
            android:layout_width="@dimen/separator_width"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/text_customer_name"
            android:layout_width="@dimen/no_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_spacing"
            android:layout_marginRight="@dimen/list_item_spacing"
            android:layout_weight="0.35"
            android:padding="@dimen/list_item_padding"
            android:text="@string/customer"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_app_text" />

        <TextView
            android:layout_width="@dimen/separator_width"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="@dimen/no_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_spacing"
            android:layout_marginRight="@dimen/list_item_spacing"
            android:layout_weight="0.33"
            android:padding="@dimen/list_item_padding"
            android:text="@string/product"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_app_text" />

        <TextView
            android:layout_width="@dimen/separator_width"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/text_tank_no"
            android:layout_width="@dimen/no_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_spacing"
            android:layout_marginRight="@dimen/list_item_spacing"
            android:layout_weight="0.15"
            android:padding="@dimen/list_item_padding"
            android:text="@string/tank_no"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_app_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_width"
        android:background="@color/colorBlack" />

</LinearLayout>