<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bizconnectivity.tismobile.activities.SyncDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/footer_menu_height"
        android:orientation="vertical">

        <include
            android:id="@+id/header_sync"
            layout="@layout/header_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_loading_bay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/header_title_text_spacing"
            android:layout_marginTop="@dimen/header_title_text_spacing"
            android:gravity="center_horizontal"
            android:text="@string/sync_data"
            android:textStyle="bold"
            android:textSize="@dimen/header_title_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/list_view_header_color"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/text_job_id"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.17"
                android:padding="@dimen/list_item_padding"
                android:text="@string/order"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

            <TextView
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorBlack" />

            <TextView
                android:id="@+id/text_customer_name"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.35"
                android:padding="@dimen/list_item_padding"
                android:text="@string/customer"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

            <TextView
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorBlack" />

            <TextView
                android:id="@+id/text_product_name"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.33"
                android:padding="@dimen/list_item_padding"
                android:text="@string/product"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

            <TextView
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorBlack" />

            <TextView
                android:id="@+id/text_tank_no"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.15"
                android:padding="@dimen/list_item_padding"
                android:text="@string/tank_no"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorBlack" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include
            android:id="@+id/footer_sync"
            layout="@layout/footer_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
