<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bizconnectivity.tismobile.activities.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/header_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTruckBayTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/header_title_text_spacing"
            android:layout_marginTop="@dimen/header_title_text_spacing"
            android:gravity="center_horizontal"
            android:text="@string/truck_loading_bay"
            android:textStyle="bold"
            android:textSize="@dimen/header_title_text" />

        <TextView
            android:id="@+id/hDivider1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:id="@+id/tvTruckBayListHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/list_view_header_color"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvLoadingBayOrderId"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.17"
                android:padding="@dimen/list_item_padding"
                android:text="@string/order"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

            <TextView
                android:id="@+id/separator1"
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorBlack" />

            <TextView
                android:id="@+id/tvLoadingBayCustomer"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.35"
                android:padding="@dimen/list_item_padding"
                android:text="@string/customer"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

            <TextView
                android:id="@+id/separator2"
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorBlack" />

            <TextView
                android:id="@+id/tvLoadingBayProduct"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.33"
                android:padding="@dimen/list_item_padding"
                android:text="@string/product"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

            <TextView
                android:id="@+id/separator3"
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorBlack" />

            <TextView
                android:id="@+id/tvLoadingBayTankNo"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:layout_weight="0.15"
                android:padding="@dimen/list_item_padding"
                android:text="@string/tank_no"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_app_text" />

        </LinearLayout>

        <ExpandableListView
            android:id="@+id/expandable_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/footer_menu_height" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include
            android:id="@+id/footer"
            layout="@layout/footer_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
